added link to notebook

--- a/docs/notebooks/mdf_reader_test_overview.ipynb
+++ b/docs/notebooks/mdf_reader_test_overview.ipynb
@@ -2151,7 +2151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To learn how to construc a schema or data model for a particular deck/source, visit this other tutorial. INSERT LINK TO NEXT NOTEBOOK"
+    "To learn how to construc a schema or data model for a particular deck/source, visit this other tutorial: [create_data_model.ipynb](https://git.noc.ac.uk/brecinosrivas/mdf_reader/-/blob/master/docs/notebooks/create_data_model.ipynb)"
    ]
   }
  ],
