added missing link to notebook

--- a/docs/notebooks/CLIWOC_missing_code_tables.ipynb
+++ b/docs/notebooks/CLIWOC_missing_code_tables.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "According to the [documentation](https://stvno.github.io/page/cliwoc/) of this deck (730) there are up to 20 different ways of writing down the air pressure but the code tables are not available anymore on the website. Therefore, we extracted from the supplemental data all possible entries for those fields which are missing a code table. We count each entry in order to construct a code table for that particular variable.\n",
     "\n",
-    "The code to extract multiple variables from the CLIWOC supplemental data can be found [here INSERT LINK AFTER COMMIT]()\n",
+    "The code to extract multiple variables from the CLIWOC supplemental data can be found [here](https://git.noc.ac.uk/brecinosrivas/mdf_reader/-/blob/master/tests/gather_stats_c99.py)\n",
     "\n",
     "\n",
     "### Set up "
