--- a/docs/notebooks/CLIWOC_missing_code_tables.ipynb
+++ b/docs/notebooks/CLIWOC_missing_code_tables.ipynb
@@ -5,7 +5,7 @@
    "id": "nutritional-indie",
    "metadata": {},
    "source": [
-    "## Generating CLIWOC missing code tables "
+    "## Generating CLIWOC missing code tables"
    ]
   },
   {
@@ -13,11 +13,11 @@
    "id": "grateful-coalition",
    "metadata": {},
    "source": [
-    "The Climatological Database for the World's Oceans 1750-1850 ([CLIWOC](https://stvno.github.io/page/cliwoc/)) has valuable information on its supplemental data stored in the [IMMA](https://icoads.noaa.gov/e-doc/imma/R3.0-imma1.pdf) format under the C99 column. \n",
+    "The Climatological Database for the World's Oceans 1750-1850 ([CLIWOC](https://stvno.github.io/page/cliwoc/)) has valuable information on its supplemental data stored in the [IMMA](https://icoads.noaa.gov/e-doc/imma/R3.0-imma1.pdf) format under the C99 column.\n",
     "\n",
-    "We have successfully extracted this information with the [mdf_reader()](https://git.noc.ac.uk/brecinosrivas/mdf_reader) tool, but several important variables are missing their code tables. \n",
+    "We have successfully extracted this information with the [mdf_reader()](https://git.noc.ac.uk/brecinosrivas/mdf_reader) tool, but several important variables are missing their code tables.\n",
     "\n",
-    "List of variables: \n",
+    "List of variables:\n",
     "\n",
     "- Ship types\n",
     "- latitude indicator\n",
@@ -30,7 +30,7 @@
     "- Barometer type\n",
     "- Distance units\n",
     "- Distance units to land marks\n",
-    "- Distance units of how much the ship traveled \n",
+    "- Distance units of how much the ship traveled\n",
     "- Units of other measurements (e.g. current speed)\n",
     "- Humidity units\n",
     "\n",
@@ -38,8 +38,7 @@
     "\n",
     "The code to extract multiple variables from the CLIWOC supplemental data can be found [here](https://git.noc.ac.uk/brecinosrivas/mdf_reader/-/blob/master/tests/gather_stats_c99.py)\n",
     "\n",
-    "\n",
-    "### Set up "
+    "### Set up"
    ]
   },
   {
@@ -50,22 +49,22 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import pickle\n",
-    "from collections import defaultdict\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
+    "\n",
     "# PARAMS for plots\n",
     "from matplotlib import rcParams\n",
+    "\n",
     "sns.set_style(\"whitegrid\")\n",
-    "rcParams['axes.labelsize'] = 14\n",
-    "rcParams['xtick.labelsize'] = 14\n",
-    "rcParams['ytick.labelsize'] = 14\n",
-    "rcParams['legend.fontsize'] = 16\n",
-    "rcParams['legend.title_fontsize'] = 16"
+    "rcParams[\"axes.labelsize\"] = 14\n",
+    "rcParams[\"xtick.labelsize\"] = 14\n",
+    "rcParams[\"ytick.labelsize\"] = 14\n",
+    "rcParams[\"legend.fontsize\"] = 16\n",
+    "rcParams[\"legend.title_fontsize\"] = 16"
    ]
   },
   {
@@ -84,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Paths to data\n",
-    "dirs = '/Users/brivas/c3s_work/mdf_reader/tests/data/133-730/133-730'\n",
+    "dirs = \"/Users/brivas/c3s_work/mdf_reader/tests/data/133-730/133-730\"\n",
     "file_names = sorted(os.listdir(dirs))"
    ]
   },
@@ -122,7 +121,7 @@
     "    Params:\n",
     "    ------\n",
     "    dic: python dictionary containing all variables stats per year\n",
-    "    key: variable name \n",
+    "    key: variable name\n",
     "    year: year to extract\n",
     "    Returns:\n",
     "    --------\n",
@@ -153,9 +152,9 @@
     "    Returns:\n",
     "    --------\n",
     "    df: dataframe from get_df\n",
-    "    \n",
+    "\n",
     "    \"\"\"\n",
-    "    with open(path_to_file, 'rb') as handle:\n",
+    "    with open(path_to_file, \"rb\") as handle:\n",
     "        base = os.path.basename(path_to_file)\n",
     "        year = os.path.splitext(base)[0]\n",
     "        dic_pickle = pickle.load(handle)\n",
@@ -171,22 +170,20 @@
    "outputs": [],
    "source": [
     "def make_data_frame(list_of_files, main_directory, key):\n",
-    "    \n",
-    "    # Define empty arrays to store the data \n",
-    "    years=np.array([])\n",
+    "    # Define empty arrays to store the data\n",
+    "    years = np.array([])\n",
     "    types_of_var = np.array([])\n",
     "    counts_var = np.array([])\n",
-    "    \n",
+    "\n",
     "    for file in list_of_files:\n",
     "        full_path = os.path.join(main_directory, file)\n",
     "        var_type, count, year_f = exptract_year_arrays(full_path, key)\n",
     "        years = np.concatenate([years, year_f])\n",
     "        types_of_var = np.concatenate([types_of_var, var_type])\n",
     "        counts_var = np.concatenate([counts_var, count])\n",
-    "    \n",
-    "    dataset = pd.DataFrame({'Year': years, \n",
-    "                            key: types_of_var, 'Count': counts_var})\n",
-    "    \n",
+    "\n",
+    "    dataset = pd.DataFrame({\"Year\": years, key: types_of_var, \"Count\": counts_var})\n",
+    "\n",
     "    return dataset"
    ]
   },
@@ -218,21 +215,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of variables names stored in the pickle files \n",
-    "dic_keys = ['ship_types', \n",
-    "            'lan_inds', # in a silly mistake I wrote lat wrong in the output data set. Oh well\n",
-    "            'lon_inds', \n",
-    "            'at_units', \n",
-    "            'sst_units', \n",
-    "            'ap_units', \n",
-    "            'bart_units', \n",
-    "            'lon_units', \n",
-    "            'baro_types',\n",
-    "            'distance_units',\n",
-    "            'distance_units_to_land',\n",
-    "            'distance_units_travelled',\n",
-    "            'units_of_other_measurements',\n",
-    "            'humidity_units']\n",
+    "# List of variables names stored in the pickle files\n",
+    "dic_keys = [\n",
+    "    \"ship_types\",\n",
+    "    \"lan_inds\",  # in a silly mistake I wrote lat wrong in the output data set. Oh well\n",
+    "    \"lon_inds\",\n",
+    "    \"at_units\",\n",
+    "    \"sst_units\",\n",
+    "    \"ap_units\",\n",
+    "    \"bart_units\",\n",
+    "    \"lon_units\",\n",
+    "    \"baro_types\",\n",
+    "    \"distance_units\",\n",
+    "    \"distance_units_to_land\",\n",
+    "    \"distance_units_travelled\",\n",
+    "    \"units_of_other_measurements\",\n",
+    "    \"humidity_units\",\n",
+    "]\n",
     "\n",
     "\n",
     "df_ships = make_data_frame(file_names, dirs, dic_keys[0]).dropna()\n",
@@ -257,7 +256,7 @@
    "id": "pressing-discovery",
    "metadata": {},
    "source": [
-    "- Ship types "
+    "- Ship types"
    ]
   },
   {
@@ -336,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame({'Types of Ship': types_of_ships})"
+    "df = pd.DataFrame({\"Types of Ship\": types_of_ships})"
    ]
   },
   {
@@ -402,7 +401,7 @@
     }
    ],
    "source": [
-    "Bark_or_Barque = df[df['Types of Ship'].str.contains('|'.join(['BARK', 'FALUCHO']))]\n",
+    "Bark_or_Barque = df[df[\"Types of Ship\"].str.contains(\"|\".join([\"BARK\", \"FALUCHO\"]))]\n",
     "Bark_or_Barque"
    ]
   },
@@ -453,7 +452,9 @@
     }
    ],
    "source": [
-    "Barkentine_or_Barquentine = df[df['Types of Ship'].str.contains('|'.join(['BARQUEN', 'BARKEN']))]\n",
+    "Barkentine_or_Barquentine = df[\n",
+    "    df[\"Types of Ship\"].str.contains(\"|\".join([\"BARQUEN\", \"BARKEN\"]))\n",
+    "]\n",
     "Barkentine_or_Barquentine"
    ]
   },
@@ -560,7 +561,11 @@
     }
    ],
    "source": [
-    "Brigantine = df[df['Types of Ship'].str.contains('|'.join(['BRIG', 'BRIGAN', 'BRIK', 'BERGANTIN', 'BRICK', 'BARGENTIJN']))]\n",
+    "Brigantine = df[\n",
+    "    df[\"Types of Ship\"].str.contains(\n",
+    "        \"|\".join([\"BRIG\", \"BRIGAN\", \"BRIK\", \"BERGANTIN\", \"BRICK\", \"BARGENTIJN\"])\n",
+    "    )\n",
+    "]\n",
     "Brigantine"
    ]
   },
@@ -629,7 +634,7 @@
     }
    ],
    "source": [
-    "Schooner = df[df['Types of Ship'].str.contains('|'.join(['SCHO', 'GOLET']))]\n",
+    "Schooner = df[df[\"Types of Ship\"].str.contains(\"|\".join([\"SCHO\", \"GOLET\"]))]\n",
     "Schooner"
    ]
   },
@@ -728,7 +733,7 @@
     }
    ],
    "source": [
-    "Frigate = df[df['Types of Ship'].str.contains('GAT', regex=False)]\n",
+    "Frigate = df[df[\"Types of Ship\"].str.contains(\"GAT\", regex=False)]\n",
     "Frigate"
    ]
   },
@@ -787,7 +792,7 @@
     }
    ],
    "source": [
-    "Steam = df[df['Types of Ship'].str.contains('STEAM', regex=False)]\n",
+    "Steam = df[df[\"Types of Ship\"].str.contains(\"STEAM\", regex=False)]\n",
     "Steam"
    ]
   },
@@ -866,7 +871,7 @@
     }
    ],
    "source": [
-    "Corvet = df[df['Types of Ship'].str.contains('|'.join(['KORV', 'CORVE']))]\n",
+    "Corvet = df[df[\"Types of Ship\"].str.contains(\"|\".join([\"KORV\", \"CORVE\"]))]\n",
     "Corvet"
    ]
   },
@@ -930,7 +935,7 @@
     }
    ],
    "source": [
-    "Cotter = df[df['Types of Ship'].str.contains('|'.join(['KOTT', 'COTT', 'CUTT']))]\n",
+    "Cotter = df[df[\"Types of Ship\"].str.contains(\"|\".join([\"KOTT\", \"COTT\", \"CUTT\"]))]\n",
     "Cotter"
    ]
   },
@@ -1004,7 +1009,7 @@
     }
    ],
    "source": [
-    "Sloop = df[df['Types of Ship'].str.contains('|'.join(['SLOOP', 'SLOEP']))]\n",
+    "Sloop = df[df[\"Types of Ship\"].str.contains(\"|\".join([\"SLOOP\", \"SLOEP\"]))]\n",
     "Sloop"
    ]
   },
@@ -1073,7 +1078,7 @@
     }
    ],
    "source": [
-    "Snow =  df[df['Types of Ship'].str.contains('|'.join(['SNOW', 'SNA']))]\n",
+    "Snow = df[df[\"Types of Ship\"].str.contains(\"|\".join([\"SNOW\", \"SNA\"]))]\n",
     "Snow"
    ]
   },
@@ -1167,7 +1172,9 @@
     }
    ],
    "source": [
-    "Naval_salining_ships = df[df['Types of Ship'].str.contains('|'.join(['TH RATE', 'AVISO', 'RATE']))]\n",
+    "Naval_salining_ships = df[\n",
+    "    df[\"Types of Ship\"].str.contains(\"|\".join([\"TH RATE\", \"AVISO\", \"RATE\"]))\n",
+    "]\n",
     "Naval_salining_ships"
    ]
   },
@@ -1221,7 +1228,7 @@
     }
    ],
    "source": [
-    "East_Indianman = df[df['Types of Ship'].str.contains('SPIEGELRETOURSC')]\n",
+    "East_Indianman = df[df[\"Types of Ship\"].str.contains(\"SPIEGELRETOURSC\")]\n",
     "East_Indianman"
    ]
   },
@@ -1275,7 +1282,7 @@
     }
    ],
    "source": [
-    "Scow = df[df['Types of Ship'].str.contains('GABARRE')]\n",
+    "Scow = df[df[\"Types of Ship\"].str.contains(\"GABARRE\")]\n",
     "Scow"
    ]
   },
@@ -1334,7 +1341,7 @@
     }
    ],
    "source": [
-    "Fluyt = df[df['Types of Ship'].str.contains('FLU')]\n",
+    "Fluyt = df[df[\"Types of Ship\"].str.contains(\"FLU\")]\n",
     "Fluyt"
    ]
   },
@@ -1533,11 +1540,29 @@
     }
    ],
    "source": [
-    "Ships_all_languages = df[df['Types of Ship'].str.contains('|'.join(['SHIP', 'PAQUE', \n",
-    "                                                                    'PAKKET', 'BUQUE', 'VES', \n",
-    "                                                                    'SCHIP', 'NAV', 'TRANSP', 'EXPLOR', 'CHAMBE',\n",
-    "                                                                   'BALANDRA', 'PINK', 'HOEKER', 'POLACRA',\n",
-    "                                                                   'KOOP']))]\n",
+    "Ships_all_languages = df[\n",
+    "    df[\"Types of Ship\"].str.contains(\n",
+    "        \"|\".join(\n",
+    "            [\n",
+    "                \"SHIP\",\n",
+    "                \"PAQUE\",\n",
+    "                \"PAKKET\",\n",
+    "                \"BUQUE\",\n",
+    "                \"VES\",\n",
+    "                \"SCHIP\",\n",
+    "                \"NAV\",\n",
+    "                \"TRANSP\",\n",
+    "                \"EXPLOR\",\n",
+    "                \"CHAMBE\",\n",
+    "                \"BALANDRA\",\n",
+    "                \"PINK\",\n",
+    "                \"HOEKER\",\n",
+    "                \"POLACRA\",\n",
+    "                \"KOOP\",\n",
+    "            ]\n",
+    "        )\n",
+    "    )\n",
+    "]\n",
     "Ships_all_languages"
    ]
   },
@@ -1559,7 +1584,22 @@
     }
    ],
    "source": [
-    "total = len(Bark_or_Barque) + len(Barkentine_or_Barquentine) + len(Brigantine) + len(Schooner) + len(Frigate) + len(Steam) + len(Corvet) + len(Cotter) + len(Sloop) + len(Snow) + len(Ships_all_languages)+ len(East_Indianman) + len(Scow) + len(Fluyt)\n",
+    "total = (\n",
+    "    len(Bark_or_Barque)\n",
+    "    + len(Barkentine_or_Barquentine)\n",
+    "    + len(Brigantine)\n",
+    "    + len(Schooner)\n",
+    "    + len(Frigate)\n",
+    "    + len(Steam)\n",
+    "    + len(Corvet)\n",
+    "    + len(Cotter)\n",
+    "    + len(Sloop)\n",
+    "    + len(Snow)\n",
+    "    + len(Ships_all_languages)\n",
+    "    + len(East_Indianman)\n",
+    "    + len(Scow)\n",
+    "    + len(Fluyt)\n",
+    ")\n",
     "total"
    ]
   },
@@ -1576,7 +1616,7 @@
    "id": "waiting-syndicate",
    "metadata": {},
    "source": [
-    "- AT units "
+    "- AT units"
    ]
   },
   {
@@ -1605,7 +1645,7 @@
    "id": "unnecessary-binary",
    "metadata": {},
    "source": [
-    "- SST units "
+    "- SST units"
    ]
   },
   {
@@ -1634,7 +1674,7 @@
    "id": "hollow-rings",
    "metadata": {},
    "source": [
-    "- Air pressure units\n"
+    "- Air pressure units"
    ]
   },
   {
@@ -1675,7 +1715,7 @@
    "id": "spiritual-bulgarian",
    "metadata": {},
    "source": [
-    "- Attached thermometer units\n"
+    "- Attached thermometer units"
    ]
   },
   {
@@ -1763,7 +1803,7 @@
    "id": "involved-pressure",
    "metadata": {},
    "source": [
-    "- Other units for which there was no information "
+    "- Other units for which there was no information"
    ]
   },
   {
@@ -1922,15 +1962,22 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(20,10))\n",
+    "fig = plt.figure(figsize=(20, 10))\n",
     "\n",
     "ax = fig.add_subplot(111)\n",
     "\n",
-    "g = sns.histplot(data=df_barot, x=\"Year\", hue=\"baro_types\", \n",
-    "                 multiple=\"stack\", palette='deep', ax=ax, legend=True)\n",
+    "g = sns.histplot(\n",
+    "    data=df_barot,\n",
+    "    x=\"Year\",\n",
+    "    hue=\"baro_types\",\n",
+    "    multiple=\"stack\",\n",
+    "    palette=\"deep\",\n",
+    "    ax=ax,\n",
+    "    legend=True,\n",
+    ")\n",
     "ax.grid(False)\n",
     "plt.setp(g.get_xticklabels(), rotation=45)\n",
-    "plt.title('Barometer types', fontsize=16)\n",
+    "plt.title(\"Barometer types\", fontsize=16)\n",
     "\n",
     "plt.show()"
    ]
@@ -1953,17 +2000,24 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(20,10))\n",
+    "fig = plt.figure(figsize=(20, 10))\n",
     "\n",
     "ax = fig.add_subplot(111)\n",
     "\n",
     "cmap = sns.set_palette(\"rocket\", n_colors=len(df_apu.ap_units.unique()))\n",
     "\n",
-    "g = sns.histplot(data=df_apu, x=\"Year\", hue=\"ap_units\", \n",
-    "                 multiple=\"stack\", palette=cmap, ax=ax, legend=True)\n",
+    "g = sns.histplot(\n",
+    "    data=df_apu,\n",
+    "    x=\"Year\",\n",
+    "    hue=\"ap_units\",\n",
+    "    multiple=\"stack\",\n",
+    "    palette=cmap,\n",
+    "    ax=ax,\n",
+    "    legend=True,\n",
+    ")\n",
     "ax.grid(False)\n",
     "plt.setp(g.get_xticklabels(), rotation=45)\n",
-    "plt.title('Air temp units', fontsize=16)\n",
+    "plt.title(\"Air temp units\", fontsize=16)\n",
     "\n",
     "plt.show()"
    ]
@@ -1994,33 +2048,49 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(2, 1, figsize=(20,10))\n",
+    "fig, ax = plt.subplots(2, 1, figsize=(20, 10))\n",
     "\n",
     "\n",
-    "g = sns.histplot(data=df_lati, x=\"Year\", hue=\"lan_inds\", \n",
-    "                 multiple=\"stack\", palette='deep', ax=ax[0], legend=True)\n",
+    "g = sns.histplot(\n",
+    "    data=df_lati,\n",
+    "    x=\"Year\",\n",
+    "    hue=\"lan_inds\",\n",
+    "    multiple=\"stack\",\n",
+    "    palette=\"deep\",\n",
+    "    ax=ax[0],\n",
+    "    legend=True,\n",
+    ")\n",
     "plt.setp(g.get_xticklabels(), rotation=45)\n",
     "ax[0].grid(False)\n",
     "\n",
-    "xticks=ax[0].xaxis.get_major_ticks()\n",
+    "xticks = ax[0].xaxis.get_major_ticks()\n",
     "for i in range(len(xticks)):\n",
-    "    if i%2==1:\n",
+    "    if i % 2 == 1:\n",
     "        xticks[i].set_visible(False)\n",
-    "        \n",
-    "ax[0].set_title('Coordinates indicator', fontdict={'fontsize': 16, 'fontweight': 'medium'})\n",
-    "ax[0].set_xlabel('')\n",
-    "        \n",
     "\n",
-    "p = sns.histplot(data=df_loni, x=\"Year\", hue=\"lon_inds\", \n",
-    "                 multiple=\"stack\", palette='colorblind', ax=ax[1], legend=True)\n",
+    "ax[0].set_title(\n",
+    "    \"Coordinates indicator\", fontdict={\"fontsize\": 16, \"fontweight\": \"medium\"}\n",
+    ")\n",
+    "ax[0].set_xlabel(\"\")\n",
+    "\n",
+    "\n",
+    "p = sns.histplot(\n",
+    "    data=df_loni,\n",
+    "    x=\"Year\",\n",
+    "    hue=\"lon_inds\",\n",
+    "    multiple=\"stack\",\n",
+    "    palette=\"colorblind\",\n",
+    "    ax=ax[1],\n",
+    "    legend=True,\n",
+    ")\n",
     "plt.setp(p.get_xticklabels(), rotation=45)\n",
     "ax[1].grid(False)\n",
     "\n",
-    "xticks=ax[1].xaxis.get_major_ticks()\n",
+    "xticks = ax[1].xaxis.get_major_ticks()\n",
     "for i in range(len(xticks)):\n",
-    "    if i%2==1:\n",
+    "    if i % 2 == 1:\n",
     "        xticks[i].set_visible(False)\n",
-    "         \n",
+    "\n",
     "plt.show()"
    ]
   },
