--- a/docs/notebooks/create_data_model.ipynb
+++ b/docs/notebooks/create_data_model.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a data model "
+    "## Creating a data model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will create and apply a new **data model/schema** to a raw `.imma` file, using the [mdf_reader](https://git.noc.ac.uk/iregon/mdf_reader) tool. We will add supplemental metadata to the basic `imma1` data model and display supplemental data as a pandas dataframe. \n",
+    "In this notebook we will create and apply a new **data model/schema** to a raw `.imma` file, using the [mdf_reader](https://git.noc.ac.uk/iregon/mdf_reader) tool. We will add supplemental metadata to the basic `imma1` data model and display supplemental data as a pandas dataframe.\n",
     "\n",
-    "Lets first import all the tools that we will need. "
+    "Lets first import all the tools that we will need."
    ]
   },
   {
@@ -32,9 +32,10 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append('/home/bea/')\n",
-    "import mdf_reader\n",
-    "import json"
+    "\n",
+    "sys.path.append(\"/home/bea/\")\n",
+    "\n",
+    "import mdf_reader"
    ]
   },
   {
@@ -66,7 +67,7 @@
     }
    ],
    "source": [
-    "path_to_data_models = '/home/bea/c3s_work/mdf_reader/data_models/lib/'\n",
+    "path_to_data_models = \"/home/bea/c3s_work/mdf_reader/data_models/lib/\"\n",
     "\n",
     "template_names = mdf_reader.schemas.templates()\n",
     "template_names"
@@ -80,7 +81,7 @@
     "\n",
     "Lets try to build our own **schema** based on this template for a new dck. In this notebook we will organise the data and metadata from the **US Maury collection** that corresponds to `source/dck 069-701`.\n",
     "\n",
-    "1. First lets read a raw `.imma` file from dck 701 as an example, for a subset of the data collected in April/1845. "
+    "1. First lets read a raw `.imma` file from dck 701 as an example, for a subset of the data collected in April/1845."
    ]
   },
   {
@@ -149,11 +150,11 @@
     }
    ],
    "source": [
-    "schema = 'imma1'\n",
+    "schema = \"imma1\"\n",
     "\n",
-    "data_file_path = '/home/bea/c3s_work/mdf_reader/tests/data/069-701_1845-04_subset.imma'\n",
+    "data_file_path = \"/home/bea/c3s_work/mdf_reader/tests/data/069-701_1845-04_subset.imma\"\n",
     "\n",
-    "data_raw = mdf_reader.read(data_file_path, data_model = schema)"
+    "data_raw = mdf_reader.read(data_file_path, data_model=schema)"
    ]
   },
   {
@@ -508,17 +509,17 @@
     }
    ],
    "source": [
-    "data_raw.data['c99']"
+    "data_raw.data[\"c99\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `c99` column is a bit messy. Here, we will need to separate the Suplememal Metadata ingestied in ICOADS as an entire string and sort each row out according to the source&dck documentation. \n",
+    "The `c99` column is a bit messy. Here, we will need to separate the Suplememal Metadata ingestied in ICOADS as an entire string and sort each row out according to the source&dck documentation.\n",
     "\n",
     "2. We then need to make a new data model or **schema** to be stored in the library folder of the `mdf_reader`. For this we create a folder with the name `imma1_d701` in the lib directory.\n",
-    "3. Under this folder (`/data_models/lib/imma1_d701`) we will need to add a `.json` file with the same name. This `imma1_d701.json` file will contain all the data model information with instructions on how to subdivide the metadata added to `c99`. The name of the file is `imma1_d701.json` because the data model for this deck is based on the `imma1` template shown above, but the `c99` will be further subdivided into other columns/sections. "
+    "1. Under this folder (`/data_models/lib/imma1_d701`) we will need to add a `.json` file with the same name. This `imma1_d701.json` file will contain all the data model information with instructions on how to subdivide the metadata added to `c99`. The name of the file is `imma1_d701.json` because the data model for this deck is based on the `imma1` template shown above, but the `c99` will be further subdivided into other columns/sections."
    ]
   },
   {
@@ -538,8 +539,8 @@
     }
    ],
    "source": [
-    "path_to_folder = '/home/bea/c3s_work/mdf_reader/data_models/lib/'\n",
-    "model_name = 'imma1_d701'\n",
+    "path_to_folder = \"/home/bea/c3s_work/mdf_reader/data_models/lib/\"\n",
+    "model_name = \"imma1_d701\"\n",
     "model_path = os.path.join(path_to_folder, model_name)\n",
     "model_path"
    ]
@@ -599,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We end up with something like this: "
+    "We end up with something like this:"
    ]
   },
   {
@@ -621,7 +622,8 @@
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='/home/bea/c3s_work/figures/deckschema.png')"
+    "\n",
+    "Image(filename=\"/home/bea/c3s_work/figures/deckschema.png\")"
    ]
   },
   {
@@ -645,14 +647,15 @@
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='/home/bea/c3s_work/figures/code_tables_schema_one.png')"
+    "\n",
+    "Image(filename=\"/home/bea/c3s_work/figures/code_tables_schema_one.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the key will be to modify the `c99` section of the `imma1_d701.json`. See the highlighted text in the figure below. "
+    "Now the key will be to modify the `c99` section of the `imma1_d701.json`. See the highlighted text in the figure below."
    ]
   },
   {
@@ -674,26 +677,27 @@
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='/home/bea/c3s_work/figures/c99differences.png')"
+    "\n",
+    "Image(filename=\"/home/bea/c3s_work/figures/c99differences.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `c99_sentinal` section identifies where in the data, we will have a new section. In this case we will have a new section corresponding to Supplemental Metadata. \n",
+    "The `c99_sentinal` section identifies where in the data, we will have a new section. In this case we will have a new section corresponding to Supplemental Metadata.\n",
     "\n",
-    "In our example this supplemental metadata will come from the documentation of the US Maury collection stored in the [ICOADS website](https://icoads.noaa.gov/e-doc/other/transpec/maury/maury_transpec). \n",
+    "In our example this supplemental metadata will come from the documentation of the US Maury collection stored in the [ICOADS website](https://icoads.noaa.gov/e-doc/other/transpec/maury/maury_transpec).\n",
     "\n",
     "4. We will need to add the metadata information from the website inside that `c99_sentinal` section and create as many sections as the data requires.\n",
     "\n",
-    ">sentinal: section identifier\n",
-    "applies to: format.fixed_width\n",
-    "is mandatory: it is not mandatory if the section is unique, unique in a parsing_order block, or\n",
-    "part of a sequential parsing_order block.\n",
-    "type: string\n",
-    "comments: the element bearing the sentinal needs to be, additionally, declared in the\n",
-    "elements block\n"
+    "> sentinal: section identifier\n",
+    "> applies to: format.fixed_width\n",
+    "> is mandatory: it is not mandatory if the section is unique, unique in a parsing_order block, or\n",
+    "> part of a sequential parsing_order block.\n",
+    "> type: string\n",
+    "> comments: the element bearing the sentinal needs to be, additionally, declared in the\n",
+    "> elements block"
    ]
   },
   {
@@ -721,7 +725,7 @@
     }
    ],
    "source": [
-    "Image(filename='/home/bea/c3s_work/figures/code_tables_schema_two.png')"
+    "Image(filename=\"/home/bea/c3s_work/figures/code_tables_schema_two.png\")"
    ]
   },
   {
@@ -771,7 +775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the raw data file the information looks like this: "
+    "In the raw data file the information looks like this:"
    ]
   },
   {
@@ -780,8 +784,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c99 = data_raw.data['c99']\n",
-    "line = c99.iloc[63] "
+    "c99 = data_raw.data[\"c99\"]\n",
+    "line = c99.iloc[63]"
    ]
   },
   {
@@ -828,7 +832,7 @@
     }
    ],
    "source": [
-    "#sentinal = 5\n",
+    "# sentinal = 5\n",
     "part_1 = line.values[0][0:5]\n",
     "part_1"
    ]
@@ -851,7 +855,7 @@
    ],
    "source": [
     "# cvoyd voyage number = 7\n",
-    "part_2 = line.values[0][5:5+7]\n",
+    "part_2 = line.values[0][5 : 5 + 7]\n",
     "part_2"
    ]
   },
@@ -873,7 +877,7 @@
    ],
    "source": [
     "# date = 10\n",
-    "part_3 = line.values[0][12:12+10]\n",
+    "part_3 = line.values[0][12 : 12 + 10]\n",
     "part_3"
    ]
   },
@@ -881,7 +885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. We build our `.json` file reflecting each data field from the ICOADS documentation as a new section. And add each parameter from the data as a new element. Having a `sentinal` section at the beginning of the `c99` is important since in the `.imma` format, regardless of the source/dck, will have 5 characters that will always be the same. "
+    "6. We build our `.json` file reflecting each data field from the ICOADS documentation as a new section. And add each parameter from the data as a new element. Having a `sentinal` section at the beginning of the `c99` is important since in the `.imma` format, regardless of the source/dck, will have 5 characters that will always be the same."
    ]
   },
   {
@@ -902,14 +906,14 @@
     }
    ],
    "source": [
-    "Image(filename='/home/bea/c3s_work/figures/new_schema.png')"
+    "Image(filename=\"/home/bea/c3s_work/figures/new_schema.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To each section we add the corresponding elements/parameters. "
+    "To each section we add the corresponding elements/parameters."
    ]
   },
   {
@@ -930,7 +934,7 @@
     }
    ],
    "source": [
-    "Image(filename='/home/bea/c3s_work/figures/elements.png')"
+    "Image(filename=\"/home/bea/c3s_work/figures/elements.png\")"
    ]
   },
   {
@@ -1023,16 +1027,16 @@
     }
    ],
    "source": [
-    "data_file_path = '/home/bea/c3s_work/mdf_reader/tests/data/069-701_1845-04_subset.imma'\n",
+    "data_file_path = \"/home/bea/c3s_work/mdf_reader/tests/data/069-701_1845-04_subset.imma\"\n",
     "\n",
-    "data = mdf_reader.read(data_file_path, data_model_path= model_path)"
+    "data = mdf_reader.read(data_file_path, data_model_path=model_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And magically all the messy string is separated! "
+    "And magically all the messy string is separated!"
    ]
   },
   {
@@ -1122,6 +1126,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "pd.options.display.max_columns = None\n",
     "data.data[[\"c99_sentinal\"]].head()"
    ]
