--- a/docs/notebooks/mdf_reader_test_overview.ipynb
+++ b/docs/notebooks/mdf_reader_test_overview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test and overview of the `mdf_reader` tool "
+    "## Test and overview of the `mdf_reader` tool"
    ]
   },
   {
@@ -30,9 +30,8 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append('/home/bea/')\n",
-    "import mdf_reader\n",
-    "import json"
+    "\n",
+    "sys.path.append(\"/home/bea/\")"
    ]
   },
   {
@@ -40,9 +39,9 @@
    "metadata": {},
    "source": [
     "The `mdf_reader` is a python3 tool designed to read data files compliant with a user specified [data\n",
-    "model](https://cds.climate.copernicus.eu/toolbox/doc/how-to/15_how_to_understand_the_common_data_model/15_how_to_understand_the_common_data_model.html). \n",
+    "model](https://cds.climate.copernicus.eu/toolbox/doc/how-to/15_how_to_understand_the_common_data_model/15_how_to_understand_the_common_data_model.html).\n",
     "\n",
-    "It was developed with the initial idea to read the [IMMA](https://icoads.noaa.gov/e-doc/imma/R3.0-imma1.pdf) data format, but it was further enhanced to account for other meteorological data formats. \n",
+    "It was developed with the initial idea to read the [IMMA](https://icoads.noaa.gov/e-doc/imma/R3.0-imma1.pdf) data format, but it was further enhanced to account for other meteorological data formats.\n",
     "\n",
     "Lets see an example for a typical file from [ICOADSv3.0.](https://icoads.noaa.gov/r3.html). We pick an specific montly output for a Source/Deck. In this case data from the Marine Meterological Journals data set SID/DCK: **125-704 for Oct 1878.**\n",
     "\n",
@@ -66,7 +65,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data_path = os.path.join('~/c3s_work','mdf_reader/tests/data/125-704_1878-10_subset.imma')\n",
+    "import mdf_reader\n",
+    "\n",
+    "data_path = os.path.join(\n",
+    "    \"~/c3s_work\", \"mdf_reader/tests/data/125-704_1878-10_subset.imma\"\n",
+    ")\n",
     "data_ori = pd.read_table(data_path)"
    ]
   },
@@ -146,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Very messy to just read into python! \n",
+    "Very messy to just read into python!\n",
     "\n",
     "This is why we need the `mdf_reader` tool, to helps us put those imma files in a [pandas.DataFrame](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html) format. For that we need need a **schema**.\n",
     "\n",
@@ -324,11 +327,11 @@
     }
    ],
    "source": [
-    "schema = 'imma1_d704'\n",
+    "schema = \"imma1_d704\"\n",
     "\n",
-    "data_file_path = '/home/bea/c3s_work/mdf_reader/tests/data/125-704_1878-10_subset.imma'\n",
+    "data_file_path = \"/home/bea/c3s_work/mdf_reader/tests/data/125-704_1878-10_subset.imma\"\n",
     "\n",
-    "data = mdf_reader.read(data_file_path, data_model = schema)"
+    "data = mdf_reader.read(data_file_path, data_model=schema)"
    ]
   },
   {
@@ -336,6 +339,7 @@
    "metadata": {},
    "source": [
     "A new **schema** can be build for a particular deck and source as shown in this notebook. The `imma1_d704` schema was build upon the `imma1` schema/data model but extra sections have been added to the `.json` files to include suplemental data from ICOADS documentation. This is a snapshot of the data inside the `imma1_d704.json`.\n",
+    "\n",
     "```\n",
     "\"c99_journal\": {\n",
     "            \"header\": {\"sentinal\": \"1\", \"field_layout\":\"fixed_width\",\"length\": 117},\n",
@@ -352,15 +356,14 @@
     "                  \"LMR6\": true\n",
     "              }\n",
     "\n",
-    "```\n",
-    "\n"
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now metadata information can be extracted as a component of the padas dataframe. "
+    "Now metadata information can be extracted as a component of the padas dataframe."
    ]
   },
   {
